--- a/02_coupang_class.ipynb
+++ b/02_coupang_class.ipynb
@@ -30,7 +30,8 @@
    "source": [
     "from bs4 import BeautifulSoup\n",
     "import csv\n",
-    "import requests"
+    "import requests\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -48,14 +49,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def wirte_csv(file_name, data) :\n",
-    "    # encoding='utf-8' 시 한글 깨짐 현상 발견시, encoding='euc-kr'로 지정 \n",
-    "    # 크롤하는 사이트가 euc-kr 인코딩된 한글 바이트를 사용하였기 때문,\n",
-    "    # 파이썬 출력결과는 기본적으로 utf-8, euc-kr 인코딩이 되지만\n",
-    "    # csv 파일 저장시 인코딩 방식을 직접 저장해줘야 함\n",
-    "    with open(f'{file_name}.csv', 'a', encoding='euc-kr') as f:\n",
-    "        writer = csv.writer(f, lineterminator='\\n')\n",
-    "        writer.writerow(data)"
+    "product_name = '김치'\n",
+    "# https://www.coupang.com/np/search?component=&q=김치&channel=user\n",
+    "url = f\"https://www.coupang.com/np/search?component=&q={product_name}&channel=user\""
    ]
   },
   {
@@ -64,35 +60,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## 쿠팡 기본 가격 크롤링\n",
-    "def coupnag_product_price(product_name, result_file_name) :\n",
-    "    # 크롤링할 웹 사이트 정보\n",
-    "    url = f\"https://www.coupang.com/np/search?component=&q={product_name}&channel=user\"\n",
+    "# get html\n",
+    "response = requests.get(url, headers = headers)\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BeautifulSoup을 활용하여 데이터 파싱\n",
+    "soup = BeautifulSoup(response.text, \"html.parser\")\n",
+    "# print(soup)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#상품명\n",
+    "# <div class=\"name\">비비고 썰은배추김치, 1.8kg, 1개</div>\n",
+    "names = soup.findAll('div', {'class':'name'})\n",
     "\n",
-    "    # get html\n",
-    "    response = requests.get(url, headers = headers)\n",
+    "# for item in names :\n",
+    "#     print(item.text)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# <div class=\"price\">  <span class=\"price-info\">  <span class=\"instant-discount-rate\">6%</span>   <del class=\"base-price\">14,900</del>  </span> <em class=\"sale \"> <strong class=\"price-value\">13,890</strong>원   <span class=\"badge rocket\"> <img src=\"//image6.coupangcdn.com/image/badges/falcon/v1/web/rocket-fresh@2x.png\" height=\"16\" alt=\"로켓배송\">  </span>  </em>   <span class=\"unit-price\">(<em>100</em>g당 <em>772</em>원) </span>  </div>\n",
+    "# <strong class=\"price-value\">13,890</strong>원 \n",
+    "prices = soup.findAll('strong', {'class':'price-value'})\n",
     "\n",
-    "    # BeautifulSoup을 활용하여 데이터 파싱\n",
-    "    soup = BeautifulSoup(response.text, \"html.parser\")\n",
-    "    \n",
-    "    #상품명\n",
-    "    names = soup.findAll('div', {'class':'name'})\n",
-    "    \n",
-    "    #가격\n",
-    "    prices = soup.findAll('strong', {'class':'price-value'})\n",
-    "    name_list = []\n",
-    "    price_list = []\n",
-    "    for price in prices :\n",
-    "        price_list.append(price.text)\n",
-    "    for name in names :\n",
-    "        name_list.append(name.text)\n",
-    "    try :\n",
-    "        wirte_csv(result_file_name, [\"상품명\", \"가격\"])\n",
-    "        for k in range(len(name_list)) :\n",
-    "#             print(\"*상품명 : \", name_list[k], \",    *가격 : \",price_list[k] , )\n",
-    "            wirte_csv(result_file_name, [name_list[k], price_list[k]])\n",
-    "    except :\n",
-    "        pass"
+    "# for item in prices :\n",
+    "#     print(item.text)"
    ]
   },
   {
@@ -101,7 +110,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "coupnag_product_price('종갓집 김치', '쿠팡_result_1')"
+    "name_list = []\n",
+    "price_list = []"
    ]
   },
   {
@@ -110,61 +120,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## 쿠팡 케이스별로 크롤링 하는 경우\n",
-    "def coupnag_product_price_case(product_name, result_file_name, page_no, min_price, max_price) :\n",
-    "    # 크롤링할 웹 사이트 정보\n",
-    "    url = f\"https://www.coupang.com/np/search?component=&q={product_name}&channel=user&page={page_no}&minPrice={min_price}&maxPrice={max_price}\"    # get html\n",
-    "    response = requests.get(url, headers = headers)\n",
+    "i = 0\n",
+    "for item in names :\n",
+    "    if(i > 0) : \n",
+    "        name_list.append(item.text)        \n",
+    "    i = i + 1\n",
+    "    \n",
+    "for item in prices :\n",
+    "    price_list.append(item.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "result_file_name = \"coupang_kimch.csv\"\n",
+    "for k in range(len(price_list)) :\n",
+    "#     print(\"*상품명 : \", name_list[k+1], \",    *가격 : \",price_list[k])\n",
+    "    result = pd.DataFrame(data={'상품명' : name_list, '가격' : price_list})\n",
+    "    result.to_csv(result_file_name, header = False, index = False, encoding='utf-8-sig')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## (실습2) 쿠팡 케이스별로 크롤링 하는 경우\n",
+    "product_name = '종가집 김치'\n",
+    "page_no=1\n",
+    "min_price=20000\n",
+    "max_price=40000\n",
     "\n",
-    "    # BeautifulSoup을 활용하여 데이터 파싱\n",
-    "    soup = BeautifulSoup(response.text, \"html.parser\")\n",
-    "    \n",
-    "    names = soup.findAll('div', {'class':'name'})\n",
-    "    prices = soup.findAll('strong', {'class':'price-value'})\n",
-    "    name_list = []\n",
-    "    price_list = []\n",
-    "    for price in prices :\n",
-    "        price_list.append(price.text)\n",
-    "    for name in names :\n",
-    "        name_list.append(name.text)\n",
-    "    try :\n",
-    "        wirte_csv(result_file_name, [\"상품명\", \"가격\"])\n",
-    "        for k in range(len(name_list)) :\n",
-    "            print(\"*상품명 : \", name_list[k], \",    *가격 : \",price_list[k])\n",
-    "            wirte_csv(result_file_name, [name_list[k], price_list[k]])\n",
-    "    except :\n",
-    "        pass"
+    "result_file_name ='쿠팡_result_2'\n",
+    "\n",
+    "url = f\"https://www.coupang.com/np/search?component=&q={product_name}&channel=user&page={page_no}&minPrice={min_price}&maxPrice={max_price}\""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "coupnag_product_price_case(product_name = '종가집 김치', result_file_name ='쿠팡_result_2', page_no=1, min_price=20000, max_price=40000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
