--- a/01_tripadvisor_crawling_class.ipynb
+++ b/01_tripadvisor_crawling_class.ipynb
@@ -41,18 +41,43 @@
    "outputs": [],
    "source": [
     "# 크롤링할 웹 사이트 정보\n",
-    "base_url = 'https://www.tripadvisor.co.kr/'\n",
+    "base_url = 'https://www.tripadvisor.co.kr'\n",
     "seoul_url = '/Restaurants-g294197-Seoul.html'\n",
     "\n",
     "# get html\n",
     "response = requests.get(base_url+seoul_url)\n",
-    "\n",
+    "# response.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# BeautifulSoup을 활용하여 데이터 파싱\n",
-    "soup = BeautifulSoup(response.text, 'html.parser')\n",
-    "\n",
+    "soup = BeautifulSoup(response.text, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 맛집 목록 가져오기\n",
     "lists = soup.findAll('div', {'class' : 'wQjYiB7z'}) \n",
     "\n",
+    "for item in lists:\n",
+    "    tem = str(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 데이터 파싱하기\n",
     "rest_id_list = []\n",
     "rest_name_list = []\n",
@@ -65,11 +90,17 @@
     "    full_url = base_url + href\n",
     "\n",
     "    # 순위와 이름 분리하기, 광고 제거하기\n",
+    "    #[1 , 장생건강원]\n",
+    "    #[2,  무슨음식점]\n",
+    "    #[광고음식점]\n",
+    "    \n",
     "    name = item.text.split('.')\n",
+    "\n",
     "    if len(name) == 2:\n",
     "        rest_id = name[0]\n",
     "        rest_name = name[1]\n",
     "        rest_url = full_url\n",
+    "        #데이터 프레임을 만들기 위한 리스트\n",
     "        rest_id_list.append(rest_id)\n",
     "        rest_name_list.append(rest_name)\n",
     "        rest_url_list.append(rest_url)\n",
@@ -100,63 +131,6 @@
     "\n",
     "# 서울소재 벼룩시장 정보 가져오기"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# (실습3) 이미지\n",
-    "from bs4 import BeautifulSoup\n",
-    "import requests\n",
-    "import pandas as pd\n",
-    "\n",
-    "# 크롤링할 웹 사이트 정보\n",
-    "base_url = 'https://www.tripadvisor.co.kr'\n",
-    "seoul_url = '/Restaurants-g294197-Seoul.html'\n",
-    "\n",
-    "# get html\n",
-    "response = requests.get(base_url + seoul_url)\n",
-    "\n",
-    "# BeautifulSoup을 활용하여 데이터 파싱\n",
-    "soup = BeautifulSoup(response.text, 'html.parser')\n",
-    "\n",
-    "# 맛집 목록 가져오기\n",
-    "lists = soup.findAll('div', {'class': 'wQjYiB7z'})\n",
-    "hrefs = soup.find('a')\n",
-    "# 데이터 파싱하기\n",
-    "\n",
-    "rest_id_list = []\n",
-    "rest_name_list = []\n",
-    "rest_url_list = []\n",
-    "\n",
-    "for item in lists:\n",
-    "    # 링크 가져오기\n",
-    "    href = hrefs.get('href')\n",
-    "    full_url = base_url + href\n",
-    "\n",
-    "    # 순위와 이름 분리하기, 광고 제거하기\n",
-    "    name = item.text.split('.')\n",
-    "    if len(name) == 2:\n",
-    "        rest_id = name[0]\n",
-    "        rest_name = name[1]\n",
-    "        rest_url = full_url\n",
-    "        rest_id_list.append(rest_id)\n",
-    "        rest_name_list.append(rest_name)\n",
-    "        rest_url_list.append(rest_url)\n",
-    "        # print('[ID]' + rest_id + ' [NAME]' + rest_name + ' [URL]' + rest_url)\n",
-    "result = pd.DataFrame(data={'[ID]' : rest_id_list, '[NAME]' : rest_name_list, '[URL]' : rest_url_list})\n",
-    "# print(result)\n",
-    "# result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
