update code for selenium

--- a/03_tripadvisor_image_crawling_by_selenium_class.ipynb
+++ b/03_tripadvisor_image_crawling_by_selenium_class.ipynb
@@ -23,28 +23,57 @@
     "from selenium import webdriver\n",
     "from selenium.webdriver.chrome.options import Options\n",
     "import time\n",
-    "import os\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 크롤링할 웹 사이트 정보\n",
     "base_url = 'https://www.tripadvisor.co.kr'\n",
-    "seoul_url = '/Restaurants-g294197-Seoul.html'\n",
-    "\n",
+    "seoul_url = '/Restaurants-g294197-Seoul.html'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# get html\n",
     "\n",
     "## 크롬창을 직접\n",
     "options = Options()\n",
-    "options.headless = True\n",
+    "# options.headless = True\n",
     "browser = webdriver.Chrome(options=options)\n",
     "browser.implicitly_wait(3)\n",
     "browser.get(base_url+seoul_url)\n",
     "time.sleep(5)\n",
     "# BeautifulSoup을 활용하여 데이터 파싱\n",
     "html = browser.page_source\n",
-    "soup = BeautifulSoup(html, 'html.parser')\n",
-    "\n",
+    "soup = BeautifulSoup(html, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 이미지\n",
     "photos = soup.findAll('div', {'class' : '_2Hb-Mt7l'})\n",
-    "# print(photos)\n",
-    "\n",
+    "# print(photos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "img_dir = f\"{os.getcwd()}/img\"\n",
     "if not os.path.isdir(img_dir):\n",
     "   os.mkdir(img_dir)\n",
@@ -53,7 +82,7 @@
     "    url = photo.get('style').split('\"')[1]\n",
     "    img_file_name = url.split('/')[-1]\n",
     "    img_data = requests.get(url).content\n",
-    "    with open(f'img/{img_file_name}', 'wb') as handler:\n",
+    "    with open(f'img/i{img_file_name}', 'wb') as handler:\n",
     "        handler.write(img_data)"
    ]
   },
@@ -62,7 +91,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# [실습]\n",
+    "\n",
+    "#1. 부산 이미지 다운받기\n",
+    "#2. 이미지 저장 경로 바꾸기 : busan_img/\n",
+    "#3. 이미지 파일명 바꾸기 \n",
+    "#       : photo_1.jpg, photo_2.jpg ... 이런 형태"
+   ]
   }
  ],
  "metadata": {
