update code for class

--- a/04_한국거래소_class.ipynb
+++ b/04_한국거래소_class.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,13 +22,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# copy > copy link address\n",
     "url = 'http://marketdata.krx.co.kr/contents/COM/GenerateOTP.jspx'\n",
-    "\n",
     "# copy > copy request headers\n",
     "headers = {\n",
     "    'Referer' : 'http://marketdata.krx.co.kr/mdi',\n",
@@ -37,21 +36,21 @@
     "\n",
     "# copy > copy link address 에서 ? 뒤에 부분\n",
     "body_data = {\n",
-    "        'name': 'fileDown',\n",
-    "        'filetype': 'xls',\n",
-    "        'url': 'MKD/13/1302/13020101/mkd13020101',\n",
-    "        'market_gubun': 'ALL',\n",
-    "        'sect_tp_cd': 'ALL',\n",
-    "        'schdate': '20200130',\n",
-    "        'pagePath': '/contents/MKD/13/1302/13020101/MKD13020101.jsp'\n",
+    "    'name': 'fileDown',\n",
+    "    'filetype': 'xls',\n",
+    "    'url': 'MKD/04/0404/04040200/mkd04040200_01',\n",
+    "    'market_gubun': 'ALL',\n",
+    "    'sect_tp_cd': 'ALL',\n",
+    "    'schdate': '20200618',\n",
+    "    'pagePath': '/contents/MKD/04/0404/04040200/MKD04040200.jsp',\n",
     "}\n",
-    "\n",
+    "    \n",
     "r = requests.get(url, body_data, headers=headers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,10 +62,26 @@
     "}\n",
     "r = requests.post(down_url, body_data2, headers = headers)\n",
     "\n",
-    "result = r.content\n",
-    "df = pd.read_excel(BytesIO(result))\n",
-    "df = df.sort_values(['등락률'], ascending=[False])\n",
-    "df.to_excel('C:/Users/zhining/git/python-crawling/stock.xlsx', index=False, index_label=None)"
+    "result = r.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_excel(BytesIO(result))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df = df.sort_values(['등락률'], ascending=[False])\n",
+    "df.to_excel('stock.xlsx', index=False, index_label=None)"
    ]
   },
   {
