--- a/05_youtube_api.ipynb
+++ b/05_youtube_api.ipynb
@@ -1,17 +1,48 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# OpenAPI를 활용하여 데이터 크롤링하기\n",
+    "\n",
+    "-----------\n",
+    "## 1. 크롤링 할 사이트 : Youtube\n",
+    "\n",
+    "#### 목표\n",
+    " 관심있는 채널의 타이틀, 썸네일 정보를 크롤링하여 문서로 만들기\n",
+    "\n",
+    "## 2. 크롤링 준비\n",
+    "\n",
+    "#### 가입절차\n",
+    "\n",
+    "## 3. API 참고\n",
+    "\n",
+    "#### Youtube Data API 문서\n",
+    "\n",
+    "https://developers.google.com/youtube/v3/docs\n",
+    "\n",
+    "#### Youtube Data API 중 search 기능\n",
+    "https://developers.google.com/youtube/v3/docs/search/list\n",
+    "\n",
+    "\n",
+    "#### 사전작업\n",
+    "pip install google-api-python-client  \n",
+    "pip install oauth2client"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "### 관련 라이브러리 import\n",
     "import os\n",
-    "# pip install google-api-python-client\n",
+    "\n",
     "from googleapiclient.discovery import build\n",
     "from googleapiclient.errors import HttpError\n",
     "import requests\n",
-    "# pip install oauth2client\n",
     "from oauth2client.tools import argparser\n",
     "from io import BytesIO\n",
     "\n",
@@ -25,64 +56,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 환경변수에서 API 키 추출하기\n",
-    "# YOUTUBE_API_KEY = \"발급받은 키로 바꾸세요\"\n",
-    "YOUTUBE_API_KEY = \"AIzaSyD14CY4vIzRROIWX89a-rL5OtxbeA6-HvA\""
+    "YOUTUBE_API_KEY = \"발급받은 키로 바꾸세요\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'build' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-264db2ece967>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# 이 함수는 내부적으로 https://www.googleapis.com/discovery/v1/apis/youtube/v3/rest라는\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;31m# URL에 접근하고 API 리소스와 메서드 정보를 추출\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0myoutube\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbuild\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'youtube'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'v3'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdeveloperKey\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mYOUTUBE_API_KEY\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'build' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# YouTube API 클라이언트를 생성합니다.\n",
+    "# YouTube API 클라이언트를 생성\n",
     "# build() 함수의 첫 번째 매개변수에는 API 이름\n",
-    "# 두 번째 매개변수에는 API 버전을 지정합니다.\n",
-    "# 키워드 매개변수 developerKey에는 API 키를 지정합니다.\n",
+    "# 두 번째 매개변수에는 API 버전을 지정\n",
+    "# 키워드 매개변수 developerKey에는 API 키를 지정\n",
     "# 이 함수는 내부적으로 https://www.googleapis.com/discovery/v1/apis/youtube/v3/rest라는\n",
-    "# URL에 접근하고 API 리소스와 메서드 정보를 추출합니다.\n",
+    "# URL에 접근하고 API 리소스와 메서드 정보를 추출\n",
     "youtube = build('youtube', 'v3', developerKey=YOUTUBE_API_KEY)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'youtube' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-08c6c4b6ac9e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m# list() 메서드를 실행하면 googleapiclient.http.HttpRequest가 반환\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# execute() 메서드를 실행하면 실제 HTTP 요청이 보내지며, API 응답이 반환\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m search_response = youtube.search().list(\n\u001b[0m\u001b[0;32m      6\u001b[0m     \u001b[0mpart\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'snippet'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[0mq\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'아이리포'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'youtube' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# 키워드 매개변수로 매개변수를 지정하고\n",
-    "# search.list 메서드를 호출합니다.\n",
-    "# list() 메서드를 실행하면 googleapiclient.http.HttpRequest가 반환됩니다. \n",
-    "# execute() 메서드를 실행하면 실제 HTTP 요청이 보내지며, API 응답이 반환됩니다.\n",
+    "# search.list 메서드를 호출\n",
+    "# list() 메서드를 실행하면 googleapiclient.http.HttpRequest가 반환 \n",
+    "# execute() 메서드를 실행하면 실제 HTTP 요청이 보내지며, API 응답이 반환\n",
     "search_response = youtube.search().list(\n",
     "    part='snippet',\n",
     "    q='아이리포',\n",
     "    order = \"date\",\n",
     "    maxResults = 5,\n",
-    "    # type='video',\n",
-    ").execute()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    ").execute()\n",
+    "\n",
     "# print(search_response)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'search_response' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-a4f92bbe7822>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m# json parser : http://json.parser.online.fr/\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mitem\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msearch_response\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'items'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[1;31m# 동영상 제목을 출력\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'snippet'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'title'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'search_response' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# search_response는 API 응답을 JSON으로 나타낸 dict 객체\n",
+    "# json parser : http://json.parser.online.fr/\n",
+    "\n",
+    "\n",
+    " # 동영상 제목을 출력\n",
+    "for item in search_response['items']:\n",
+    "    print(item['snippet']['title'])    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# google sample code 일부 수정부분\n",
+    "for search_result in search_response.get(\"items\", []):\n",
+    "    if search_result[\"id\"][\"kind\"] == \"youtube#video\":\n",
+    "        videos.append(\"%s (%s)\" % (search_result[\"snippet\"][\"title\"],search_result[\"id\"][\"videoId\"]))\n",
+    "    elif search_result[\"id\"][\"kind\"] == \"youtube#channel\":\n",
+    "        channels.append(\"%s (%s)\" % (search_result[\"snippet\"][\"title\"],search_result[\"id\"][\"channelId\"]))\n",
+    "    elif search_result[\"id\"][\"kind\"] == \"youtube#playlist\":\n",
+    "        playlists.append(\"%s (%s)\" % (search_result[\"snippet\"][\"title\"],search_result[\"id\"][\"playlistId\"]))\n",
+    "        \n",
+    "        \n",
+    "print(\"Videos:\\n\"+ videos)\n",
+    "print(\"Channels:\\n\"+ channels)\n",
+    "print(\"Playlists:\\n\"+ playlists)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 썸네일 이미지를 저장\n",
+    "img_dir = f\"{os.getcwd()}/youtube_img\"\n",
+    "if not os.path.isdir(img_dir):\n",
+    "   os.mkdir(img_dir)\n",
+    "\n",
+    "i = 0\n",
+    "for item in search_response['items']:\n",
+    "    # 동영상 썸네일을 출력합니다.\n",
+    "    url = item['snippet']['thumbnails']['high']['url']\n",
+    "#     print(url) \n",
+    "    img_file_name = \"photo_\" + str(i) + \".jpg\"\n",
+    "    img_data = requests.get(url).content\n",
+    "    with open(f'youtube_img/i{img_file_name}', 'wb') as handler:\n",
+    "        handler.write(img_data)\n",
+    "    i = i + 1\n",
+    "#     urls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 엑셀에 search 데이터, 썸네일 이미지 저장\n",
+    "# https://xlsxwriter.readthedocs.io/example_images.html\n",
     "videos = []\n",
     "channels = []\n",
     "playlists = []\n",
@@ -117,233 +237,6 @@
     "\n",
     "workbook.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "아이리포님의 실시간 스트리밍\n",
-      "[아이리포] 정보관리기술사 121회 기출풀이\n",
-      "[아이리포] 121회 대비 정보관리기술사 특별과정 파이널찍기특강\n",
-      "[아이리포] 121,122회 정보처리기술사 대비 과정소개-핵심집중\n",
-      "[아이리포] 121,122회 정보처리기술사 대비 과정소개-이룸\n"
-     ]
-    }
-   ],
-   "source": [
-    "# search_response는 API 응답을 JSON으로 나타낸 dict 객체입니다.\n",
-    "for item in search_response['items']:\n",
-    "    # 동영상 제목을 출력합니다.\n",
-    "    print(item['snippet']['title'])    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://i.ytimg.com/vi/KItaEmW_9YI/hqdefault.jpg\n",
-      "https://i.ytimg.com/vi/RrU27JfYm7o/hqdefault.jpg\n",
-      "https://i.ytimg.com/vi/wOq56FAs3Q0/hqdefault.jpg\n",
-      "https://i.ytimg.com/vi/ueYrhMmK4Ww/hqdefault.jpg\n",
-      "https://i.ytimg.com/vi/uC3UtwnTToA/hqdefault.jpg\n"
-     ]
-    }
-   ],
-   "source": [
-    "# http://json.parser.online.fr/\n",
-    "\n",
-    "img_dir = f\"{os.getcwd()}/youtube_img\"\n",
-    "if not os.path.isdir(img_dir):\n",
-    "   os.mkdir(img_dir)\n",
-    "\n",
-    "i = 0\n",
-    "for item in search_response['items']:\n",
-    "    # 동영상 썸네일을 출력합니다.\n",
-    "    url = item['snippet']['thumbnails']['high']['url']\n",
-    "    print(url) \n",
-    "    img_file_name = \"photo_\" + str(i) + \".jpg\"\n",
-    "    img_data = requests.get(url).content\n",
-    "    with open(f'youtube_img/i{img_file_name}', 'wb') as handler:\n",
-    "        handler.write(img_data)\n",
-    "    i = i + 1\n",
-    "    urls"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# Create the workbook and add a worksheet.\n",
-    "workbook  = xlsxwriter.Workbook('images_bytesio.xlsx')\n",
-    "worksheet = workbook.add_worksheet()\n",
-    "\n",
-    "\n",
-    "# Read an image from a remote url.\n",
-    "url = 'https://raw.githubusercontent.com/jmcnamara/XlsxWriter/' + \\\n",
-    "      'master/examples/logo.png'\n",
-    "\n",
-    "image_data = BytesIO(urlopen(url).read())\n",
-    "\n",
-    "# Write the byte stream image to a cell. Note, the filename must be\n",
-    "# specified. In this case it will be read from url string.\n",
-    "worksheet.insert_image('B2', url, {'image_data': image_data})\n",
-    "\n",
-    "\n",
-    "# Read a local image file into a a byte stream. Note, the insert_image()\n",
-    "# method can do this directly. This is for illustration purposes only.\n",
-    "filename   = 'python.png'\n",
-    "\n",
-    "image_file = open(filename, 'rb')\n",
-    "image_data = BytesIO(image_file.read())\n",
-    "image_file.close()\n",
-    "\n",
-    "\n",
-    "# Write the byte stream image to a cell. The filename must  be specified.\n",
-    "worksheet.insert_image('B8', filename, {'image_data': image_data})\n",
-    "\n",
-    "\n",
-    "workbook.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'collections.defaultdict' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-48-f80dc4512fe7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;31m# Widen the first column to make the text clearer.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mworksheet\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_column\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'A:A'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m30\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m \u001b[0mworksheet\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_rows\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'1:100'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m30\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;31m# Insert an image.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'collections.defaultdict' object is not callable"
-     ]
-    }
-   ],
-   "source": [
-    "import xlsxwriter\n",
-    "\n",
-    "# Create an new Excel file and add a worksheet.\n",
-    "workbook = xlsxwriter.Workbook('images2.xlsx')\n",
-    "worksheet = workbook.add_worksheet()\n",
-    "\n",
-    "# Widen the first column to make the text clearer.\n",
-    "worksheet.set_column('A:A', 30)\n",
-    "worksheet.set_rows('1:100', 30)\n",
-    "\n",
-    "# Insert an image.\n",
-    "worksheet.write('A2', 'Insert an image in a cell:')\n",
-    "worksheet.insert_image('B2', 'copenhagen.jpg')\n",
-    "\n",
-    "# Insert an image offset in the cell.\n",
-    "worksheet.write('A12', 'Insert an image with an offset:')\n",
-    "worksheet.insert_image('B12', 'copenhagen.jpg', {'x_offset': 15, 'y_offset': 10})\n",
-    "\n",
-    "# Insert an image with scaling.\n",
-    "worksheet.write('A23', 'Insert a scaled image:')\n",
-    "worksheet.insert_image('B23', 'copenhagen.jpg', {'x_scale': 0.5, 'y_scale': 0.5})\n",
-    "\n",
-    "workbook.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# https://xlsxwriter.readthedocs.io/example_images.html\n",
-    "import xlsxwriter\n",
-    "\n",
-    "\n",
-    "# Create an new Excel file and add a worksheet.\n",
-    "workbook = xlsxwriter.Workbook('images.xlsx')\n",
-    "worksheet = workbook.add_worksheet()\n",
-    "\n",
-    "# Widen the first column to make the text clearer.\n",
-    "worksheet.set_column('A:A', 30)\n",
-    "\n",
-    "# Insert an image.\n",
-    "worksheet.write('A2', 'Insert an image in a cell:')\n",
-    "worksheet.insert_image('B2', 'copenhagen.jpg')\n",
-    "\n",
-    "# Insert an image offset in the cell.\n",
-    "worksheet.write('A12', 'Insert an image with an offset:')\n",
-    "worksheet.insert_image('B12', 'copenhagen.jpg', {'x_offset': 15, 'y_offset': 10})\n",
-    "\n",
-    "# Insert an image with scaling.\n",
-    "worksheet.write('A23', 'Insert a scaled image:')\n",
-    "worksheet.insert_image('B23', 'copenhagen.jpg', {'x_scale': 0.5, 'y_scale': 0.5})\n",
-    "\n",
-    "workbook.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[아이리포] 정보관리기술사 121회 기출풀이\n",
-      "[아이리포] 121회 대비 정보관리기술사 특별과정 파이널찍기특강\n",
-      "[아이리포] 121,122회 정보처리기술사 대비 과정소개-핵심집중\n",
-      "[아이리포] 121,122회 정보처리기술사 대비 과정소개-이룸\n",
-      "[아이리포] 121,122회 정보처리기술사 대비 과정소개 - 빅업\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "can only concatenate str (not \"list\") to str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-26-54065ccd31e1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Videos:\\n\"\u001b[0m\u001b[1;33m+\u001b[0m \u001b[0mvideos\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Channels:\\n\"\u001b[0m\u001b[1;33m+\u001b[0m \u001b[0mchannels\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Playlists:\\n\"\u001b[0m\u001b[1;33m+\u001b[0m \u001b[0mplaylists\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"list\") to str"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "    \n",
-    "for search_result in search_response.get(\"items\", []):\n",
-    "    if search_result[\"id\"][\"kind\"] == \"youtube#video\":\n",
-    "        videos.append(\"%s (%s)\" % (search_result[\"snippet\"][\"title\"],search_result[\"id\"][\"videoId\"]))\n",
-    "    elif search_result[\"id\"][\"kind\"] == \"youtube#channel\":\n",
-    "        channels.append(\"%s (%s)\" % (search_result[\"snippet\"][\"title\"],search_result[\"id\"][\"channelId\"]))\n",
-    "    elif search_result[\"id\"][\"kind\"] == \"youtube#playlist\":\n",
-    "        playlists.append(\"%s (%s)\" % (search_result[\"snippet\"][\"title\"],search_result[\"id\"][\"playlistId\"]))\n",
-    "        \n",
-    "        \n",
-    "print(\"Videos:\\n\"+ videos)\n",
-    "print(\"Channels:\\n\"+ channels)\n",
-    "print(\"Playlists:\\n\"+ playlists)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
